--- a/_posts/2024-12-10-test.md
+++ b/_posts/2024-12-10-test.md
@@ -1,3 +1,28 @@
-# 这是一个测试
+```
+---
+layout: post
+toc: true
+title: "这是一个测试"
+date: 2024-12-10 
+description: "this is a test"
+tag: test
+---  
+```
+
+
+
+### 1
+
+something
+
+### 2
+
+something
+
+### 3
+
+something
+
+
 
 ![](https://github.com/litdawn/litdawn.github.io/raw/master/images/2024-12-10-test/1.png)
