--- a/_posts/2024-12-10-test.md
+++ b/_posts/2024-12-10-test.md
@@ -1,11 +1,11 @@
 ```
 ---
 layout: post
-toc: true
 title: "这是一个测试"
-date: 2024-12-10 
-description: "this is a test"
-tag: test
+date: 2024-12-10
+comments: false
+tags: [test1]
+toc: true
 ---  
 ```
 
