--- a/_posts/2024-12-10-test.md
+++ b/_posts/2024-12-10-test.md
@@ -19,8 +19,6 @@ something
 
 ### 3
 
-something
+something![](https://github.com/litdawn/litdawn.github.io/raw/master/images/2024-12-10-test/1.png)
 
-
-
-![](https://github.com/litdawn/litdawn.github.io/raw/master/images/2024-12-10-test/1.png)
+不能让图片在最下方？
